ref/tel/test/pos/schema-with-definition-and-reference.tel
tel 1.0 https://tel-lang.org/schema/tel-schema

name address-schema

record address
  field street string
  field city string

document
  field home address
  field work address
