ref/tel/test/neg/e205-duplicate-layer-name.tel
tel 1.0 https://tel-lang.org/schema/tel-schema

name e207-test

document
  field foo
    scalar string

layer
  name same-name
  root
    field a
      scalar string

layer
  name same-name
  root
    field b
      scalar string
